--- a/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
+++ b/Sat.Recruitment.Api/Sat.Recruitment.Api.csproj
@@ -5,10 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Services\" />
+    <None Remove="Entities\" />
+    <None Remove="Entities\Dto\" />
+    <None Remove="Services\Helpers\" />
+  </ItemGroup>
   <ItemGroup>
     <None Update="Files\Users.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -16,4 +22,10 @@
   </ItemGroup>
 
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+    <Folder Include="Entities\" />
+    <Folder Include="Entities\Dto\" />
+    <Folder Include="Services\Helpers\" />
+  </ItemGroup>
 </Project>
